@@ -1,3 +1,9 @@
+2002-07-11  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* win/tkWinDialog.c (Tk_ChooseDirectoryObjCmd): initialize
+	utfTitle to NULL, add a few more notes about limitations of
+	possible new Tk_ChooseDirectoryObjCmd function.
+
 2002-07-11  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* tests/imgPhoto.test (imgPhoto-15.1): Added test of mem-alloc
